# Practices

./: appmap.yml  pyproject.toml
Automation/: cli.py  data.csv  exercise1.py  main.py  requirements.txt
DiceRollApp/dicerollapp/: dice.py
PracticeYaml/: colorize.py  print_json.py  pyproject.toml  yaml_schema.py
SavingAccount/: .pre-commit-config.yaml  main.py  pyproject.toml  request.json  response.json
SavingAccount/smart_contracts/: helper.py  sm_saving.py
UnitTestingAndTDD/Checkout/: ToDo  checkout.py  test_checkout.py
assertion/: circle.py  demo.py  test_cases.py
todo_list/: db.sqlite3
todo_list/todo_app/: admin.py  models.py  urls.py  views.py
todo_list/todo_app/migrations/: 0001_initial.py
todo_list/todo_app/templates/: base.html
todo_list/todo_app/templates/todo_app/: index.html  todo_list.html  todoitem_confirm_delete.html  todolist_confirm_delete.html  todolist_form.html
todo_list/todo_project/: settings.py  urls.py
